probably fixed GH-pages routing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alexeysitnikov.github.io/snowpro-clone",
+  "homepage": "https://alexeysitnikov.github.io/snowpro-clone/",
   "name": "snowpro-clone",
   "version": "0.1.0",
   "private": true,
